@startuml

title __COM.NIGELGUERIN.OOPCA's Class Diagram__\n

  package  {
    class Car {
    }
  }
  

  package  {
    class CarSystem {
    }
  }
  

  package  {
    class CarSystemDriver {
    }
  }
  

  package  {
    class Customer {
    }
  }
  

  package  {
    class ElectricCar {
    }
  }
  

  package  {
    class FuelCar {
    }
  }
  

  package  {
    class Login {
    }
  }
  

  package  {
    class Seller {
    }
  }
  

  CarSystem o-- Car : car
  CarSystem o-- FuelCar : Fuelcar
  CarSystem o-- ElectricCar : Electriccar
  CarSystem o-- Customer : customer
  CarSystem o-- Seller : seller

  ElectricCar -up-|> Car

  FuelCar -up-|> Car

  Seller -up-|> Customer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
